--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,24 @@
     "lint": "eslint src --ext .jsx,.js"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "axios": "^1.5.0",
-    "framer-motion": "^10.16.4",
-    "zustand": "^4.4.1",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.14.0",
     "recharts": "^2.8.0",
-    "date-fns": "^2.30.0"
+    "terser": "^5.46.0",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "vite": "^4.4.5",
-    "postcss": "^8.4.28",
     "autoprefixer": "^10.4.14",
-    "tailwindcss": "^3.3.0"
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.0",
+    "vite": "^4.4.5"
   }
 }
