--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,12 +24,12 @@ jwt.expiration=86400000
 logging.level.root=INFO
 logging.level.com.online_quiz=DEBUG
 
-# CORS Configuration
-app.cors.allowed-origins=http://localhost:5173,http://localhost:3000,https://yourdomain.netlify.app
-app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# CORS Configuration - Allow all origins for development
+app.cors.allowed-origins=*
+app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 app.cors.allowed-headers=*
 app.cors.max-age=3600
-app.cors.allow-credentials=true
+app.cors.allow-credentials=false
 
 # Mail Configuration (Optional - for email notifications)
 spring.mail.host=smtp.gmail.com
@@ -42,10 +42,13 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 # OpenAPI/Swagger Configuration
 springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.operations-sorter=method
 springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.show-extensions=true
+springdoc.swagger-ui.doc-expansion=list
 
 # Jackson Configuration
 spring.jackson.serialization.write-dates-as-timestamps=false
