--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 # Backend Environment Variables
-spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:19594/railway
+spring.datasource.url=jdbc:mysql://switchback.proxy.rlwy.net:19205/railway
 spring.datasource.username=root
-spring.datasource.password=mWmVkeSofWZDgtcMlrwkfhyVVWVmCCDz
+spring.datasource.password=UWAJtVPuysnmzNHdXkvcobkVRYKuuVAc
 
 # JWT Configuration
 jwt.secret=your_super_secret_jwt_key_change_this_in_production_min_32_chars_long_key123
