--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,44 +1,67 @@
 spring.application.name=quiz-app
 server.port=8080
+server.servlet.context-path=/api
 
-# MySQL Railway Database Configuration
-spring.datasource.url=jdbc:mysql://switchyard.proxy.rlwy.net:19594/railway
+# MySQL Database Configuration - Railway
+# URL format: jdbc:mysql://host:port/database
+spring.datasource.url=jdbc:mysql://switchback.proxy.rlwy.net:19205/railway
 spring.datasource.username=root
-spring.datasource.password=mWmVkeSofWZDgtcMlrwkfhyVVWVmCCDz
+spring.datasource.password=UWAJtVPuysnmzNHdXkvcobkVRYKuuVAc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Connection Pool Configuration
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:update}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=20
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.open-in-view=false
 
-# JWT Configuration
-jwt.secret=your_super_secret_jwt_key_change_this_in_production_min_32_chars_long_key123
-jwt.expiration=86400000
+# JWT Configuration - IMPORTANT: Change these in production!
+jwt.secret=${JWT_SECRET:your_super_secret_jwt_key_change_this_in_production_min_32_chars_long_key123}
+jwt.expiration=${JWT_EXPIRATION:86400000}
 
-# Logging
+# Logging Configuration
 logging.level.root=INFO
 logging.level.com.online_quiz=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.transaction=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.file.name=${LOG_FILE_PATH:logs/application.log}
 
-# CORS Configuration - Allow all origins for development
-app.cors.allowed-origins=*
+# CORS Configuration
+app.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:*}
 app.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 app.cors.allowed-headers=*
 app.cors.max-age=3600
 app.cors.allow-credentials=false
 
 # Mail Configuration (Optional - for email notifications)
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
 spring.mail.username=${MAIL_USERNAME:your-email@gmail.com}
 spring.mail.password=${MAIL_PASSWORD:your-app-password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+# Server Configuration
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.compression.enabled=true
+server.compression.min-response-size=1024
 
 # OpenAPI/Swagger Configuration
 springdoc.api-docs.path=/api-docs
