--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
 # Frontend Environment Variables
-VITE_API_BASE_URL=https://your-api-domain.com/api
+VITE_API_BASE_URL=http://54.179.197.129:8080/api
